--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 #logo
 {
-    background-color: gray;
+    background-color: rgb(61, 144, 212);
     color: rgb(238, 238, 238);
     text-align: center;
     padding: 15px;
@@ -23,16 +23,20 @@
     background-color: azure;
     color: rgb(64, 139, 224);
     font-weight: bold;
+    line-height: 200%;
 }
 
 #content
 {
     float: left;
-    background-color: rgb(205, 221, 231);
+    background-color: rgb(93, 97, 100);
     width: 600px;
     padding: 30px;
     text-align: justify;
-    min-height: 570px;
+    min-height: 610px;
+    color: aliceblue;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 #ad
@@ -52,4 +56,9 @@
     font-size: larger;
     background-color: cornflowerblue;
     color: azure;
+}
+
+#audio
+{
+    text-align: center;
 }
