--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="podcast, audio, radio, talk">
 
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 
 </head>
 
@@ -48,13 +48,13 @@
             </div>
             <div id="audio">
                 <audio controls>
-                    <source src="audio/Announcement_-_podcast_hiatus_2019.mp3" type="audio/mp3">
+                    <source src="static/audio/Announcement_-_podcast_hiatus_2019.mp3" type="audio/mp3">
                     Your browser doesn't support audio files
                 </audio>
             </div>
         </div>
         <div id="ad">
-            <img src="img/reklama.jpg" alt="ad picture" width="150px" height="580px" />
+            <img src="static/img/reklama.jpg" alt="ad picture" width="150px" height="580px" />
         </div>
         <div id="footer">
             <h3>The best podcasts - TOP 5! &copy; All rights reserved</h3>
